@@ -244,6 +244,8 @@ because of Phabricator reports.
   provides is specific to certain handlers implemented in MediaWiki core.
 * MediaWikiIntegrationTestCase::addCoreDBData(), deprecated since 1.41, has
   been removed.
+* wfUnpack(), deprecated since 1.42, has been removed in favor of
+  StringUtils::unpack().
 * UIDGenerator, deprecated since 1.35, has been removed.
 * TablePager::getBody(), final and deprecated since 1.24, has been removed.
   Use ::getBodyOutput() or ::getFullOutput() instead.
